Bug 495251 - Signature Properties has huge width and cannot be resized
Summary: Signature Properties has huge width and cannot be resized
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: PDF backend (other bugs)
Version First Reported In: 23.08.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-23 17:19 UTC by andreaswuest
Modified: 2024-10-24 22:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Signature Properties Dialog (104.53 KB, image/png)
2024-10-23 17:19 UTC, andreaswuest
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andreaswuest 2024-10-23 17:19:41 UTC
Created attachment 175152 [details]
Signature Properties Dialog

Hi,

i have a signd document which contains various signatures. When i open the signature properties dialog i get a huge modal dialog showing the information which spans over my two screens and cannot be resized in width. See the screenshot attached. 

It would be nice if the signature properties dialog can be 
resized (in width) and is initially displayed in a reasonable size (not bigger in width than the parent okular window).

Since the PDF document contains personal information i would not like to attacht the document to this public ticket. However i can send it to a developer (Sune?) who wants to have a look at the problem. That should be no problem.

SOFTWARE/OS VERSIONS
Operating System: TUXEDO OS 2
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.114.0
Qt Version: 5.15.12
Kernel Version: 6.5.0-10013-tuxedo (64-bit)
Graphics Platform: offscreen
Processors: 16 × AMD Ryzen 7 4800U with Radeon Graphics
Memory: 30.8 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Comment 1 Sune Vuorela 2024-10-24 06:42:41 UTC
Feel free to send it to me ( sune@kde.org among other addresses )
Comment 2 Bug Janitor Service 2024-10-24 12:33:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/okular/-/merge_requests/1066
Comment 3 Albert Astals Cid 2024-10-24 22:57:12 UTC
Git commit 51fab5928a9202df38c5dfa164ad5499693fd5bd by Albert Astals Cid, on behalf of Sune Vuorela.
Committed on 24/10/2024 at 22:56.
Pushed by aacid into branch 'master'.

SignaturePropertiesDialog: wrap reason

M  +3    -1    part/signaturepropertiesdialog.cpp

https://invent.kde.org/graphics/okular/-/commit/51fab5928a9202df38c5dfa164ad5499693fd5bd