SignaturePropertiesDialog: wrap reason

BUG: 495251